examples/datalog/11_types/23_float_precision.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_float_prec
Knowledge graph 'test_float_prec' created.
Switched to knowledge graph: test_float_prec
> .kg use test_float_prec
Switched to knowledge graph: test_float_prec
> +values[(1.1,), (2.22,), (3.333,), (0.1,), (0.01,)].
Inserted 5 fact(s) into 'values'.
> ?- values(V).
5 rows:
  (0.01)
  (0.1)
  (1.1)
  (2.22)
  (3.333)
> computed(V, R) :- values(V), R = V * 2.0.
Script error: Parse error: Invalid arithmetic expression: '2.0'
